[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/EnemyAssets/tank_enemy_gif5.png" type="Texture" id=1]
[ext_resource path="res://Assets/EnemyAssets/tank_enemy_gif2.png" type="Texture" id=2]
[ext_resource path="res://Assets/EnemyAssets/tank_enemy_gif4.png" type="Texture" id=3]
[ext_resource path="res://Assets/EnemyAssets/tank_enemy_gif3.png" type="Texture" id=4]
[ext_resource path="res://Assets/EnemyAssets/tank_enemy.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Enemies/StaticEnemy.gd" type="Script" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 51.5, 90.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "Fire",
"speed": 6.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 48.5, 87.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 633.001

[sub_resource type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 46.5, 5 )

[node name="StaticEnemy" type="Area2D" groups=["Enemies"]]
rotation = -1.5708
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, 21.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.003, 0.977563 )
scale = Vector2( 1, 1.0015 )
frames = SubResource( 2 )
playing = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -96 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 3.5, 25.5 )
shape = SubResource( 7 )

[node name="Movetimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="EnemyDetectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectArea"]
visible = false
shape = SubResource( 3 )

[node name="HpBar" type="ProgressBar" parent="."]
margin_left = 70.0
margin_top = -61.0
margin_right = 236.0
margin_bottom = -47.0
rect_rotation = 90.0
custom_fonts/font = SubResource( 4 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_value = 3.0

[node name="EnemyBack" type="Area2D" parent="." groups=["EnemyBack"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBack"]
position = Vector2( 3.5, 126 )
shape = SubResource( 8 )

[node name="CrossButton" type="TouchScreenButton" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.00392157 )
position = Vector2( -52.059, -73.4161 )
scale = Vector2( 1.96985, 3.10654 )
normal = ExtResource( 7 )

[connection signal="area_entered" from="." to="." method="_on_StaticEnemy_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="Movetimer" to="." method="_on_Movetimer_timeout"]
[connection signal="area_entered" from="EnemyDetectArea" to="." method="_on_EnemyDetectArea_area_entered"]
[connection signal="area_exited" from="EnemyDetectArea" to="." method="_on_EnemyDetectArea_area_exited"]
[connection signal="pressed" from="CrossButton" to="." method="_on_CrossButton_pressed"]
